fixing tag cloud link

--- a/source/layouts/blog.erb
+++ b/source/layouts/blog.erb
@@ -47,7 +47,7 @@
                         </li>
                         <% current_page.tags.each do |tag| %>
                         <li>
-                          <%= link_to tag, 'tags/' + tag + ".html" %>
+                          <%= link_to tag, '/blog/tags/' + tag + ".html" %>
                         </li>
 
                         <% end %>
