--- a/source/layouts/blog.erb
+++ b/source/layouts/blog.erb
@@ -15,8 +15,6 @@
                     <%= tag_cloud %>
 
                     <div class='subscribe'>
-
-
                         <a class="a2a_dd" href="https://www.addtoany.com/subscribe"><img src="https://static.addtoany.com/buttons/subscribe_106_16.gif" width="106" height="16" border="0" alt="Subscribe"/></a>
                         <script>
                         var a2a_config = a2a_config || {};
@@ -60,16 +58,7 @@
 
                 <%if current_page.data.author != nil %>
                 <div class='share'>
-                    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-
-                        <a class="a2a_button_linkedin"></a>
-                        <a class="a2a_button_copy_link"></a>
-                        <a class="a2a_button_email"></a>
-                        <a class="a2a_button_twitter"></a>
-                        <a class="a2a_button_facebook"></a>
-                        <a class="a2a_button_google_plus"></a>
-                    </div>
-                    <script async src="https://static.addtoany.com/menu/page.js"></script>
+                    <%= partial "partials/share" %>
                 </div>
 
                 <%= partial "partials/authorbio" %>
