--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -1,7 +1,7 @@
 ---
 pageable: true
 per_page: 12
-title: 
+title:
 ---
 <h1>Articles tagged '<%= tagname %>'</h1>
 
@@ -15,7 +15,7 @@ title:
 
 <ul>
   <% page_articles.each_with_index do |article, i| %>
-    <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
+    <%= partial(:"partials/articlesummary", :locals=>{:article => article}) %>
   <% end %>
 </ul>
 
