--- a/source/partials/_articlelayoutfoot.erb
+++ b/source/partials/_articlelayoutfoot.erb
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
   DiscourseEmbed = { discourseUrl: 'https://developer.inindca.com/forum/',
-                     discourseEmbedUrl: 'https://developer.inindca.com/blog/<%= current_page.url%>' };
+                     discourseEmbedUrl: 'https://developer.inindca.com/blog<%= current_page.url%>' };
 
   (function() {
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
