update blog comment urls

--- a/source/partials/_articlelayoutfoot.erb
+++ b/source/partials/_articlelayoutfoot.erb
@@ -5,16 +5,24 @@
 <%= partial "partials/authorbio" %>
 <%= lint_page(current_page) %>
 
-<%= current_page.url%>
+
+<h4>Discuss</h4>
 <div id='discourse-comments'></div>
 
 <script type="text/javascript">
-  DiscourseEmbed = { discourseUrl: 'https://developer.inindca.com/forum/',
-                     discourseEmbedUrl: 'https://developer.inindca.com/blog<%= current_page.url%>' };
+
+  DiscourseEmbed = { discourseUrl: 'https://developer.mypurecloud.com/forum/',
+                     discourseEmbedUrl: 'https://developer.mypurecloud.com/blog<%= current_page.url%>' };
+
+  if(window.location.hostname !== "developer.mypurecloud.com"){
+      DiscourseEmbed = { discourseUrl: 'https://developer.inindca.com/forum/',
+                         discourseEmbedUrl: 'https://developer.inindca.com/blog<%= current_page.url%>' };
+  }
 
   (function() {
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
     d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
   })();
+
 </script>
