--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,7 +22,7 @@ is_root_page: true
       </li>
       <% article.tags.each do |tag| %>
       <li>
-        <%= link_to tag, 'tags/' + tag + ".html" %>
+        <%= link_to tag, 'tags/' + tag + "/" %>
       </li>
 
       <% end %>
