--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -1,9 +1,9 @@
 ---
 pageable: true
 per_page: 12
-title:
+title: Tag Filter
 ---
-<h1>Articles tagged '<%= tagname %>'</h1>
+<h2>Articles tagged '<%= tagname %>'</h2>
 
 <% if paginate && num_pages > 1 %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
