--- a/source/search.json.erb
+++ b/source/search.json.erb
@@ -10,7 +10,7 @@ pages = get_search_index_pages(sitemap)
 <% pages.each do |p| %>
     {
         "title": "<%= p.data.title %>",
-        "url": "<%=p.url.gsub('/index.html','')%>",
+        "url": "/blog<%=p.url.gsub('/index.html','')%>",
         "content" : "<%= strip_tags(get_page_content_for_search(p.source_file))%>",
         "type" : "blog"
     },
