updating manifest for proper paths

--- a/source/manifest.json.erb
+++ b/source/manifest.json.erb
@@ -3,14 +3,18 @@ layout: false
 directory_index: false
 notoc: true
 ---
-<% pages = sitemap.resources.find_all{|p| !p.is_a?(Middleman::Sitemap::Extensions::RedirectResource) && p.source_file.match(/\.html/) && !p.source_file.match(/stylesheets/) && !p.data.sitemap_noindex == true } %>
+<% pages = sitemap.resources.find_all{|p| !p.is_a?(Middleman::Sitemap::Extensions::RedirectResource) &&
+    p.source_file.match(/\.html/) &&
+    !p.source_file.match(/stylesheets/) &&
+    !p.source_file.match(/vendor/) && 
+    !p.data.sitemap_noindex == true } %>
 {
     "name": "developercenter-blog",
     "version": <%=ENV['BUILD_NUMBER']%>,
     "indexFiles": [
         <% pages.each do |p| %>
         {
-            "url": "/developercenter-blog/blog/<%=p.path%>",
+            "url": "/developercenter-blog/blog/<%=p.destination_path%>",
             "file":  "/<%=p.path%>"
         },
         <% end %>
