[API-2508] add cdn info for search

--- a/source/manifest.json.erb
+++ b/source/manifest.json.erb
@@ -20,6 +20,9 @@ notoc: true
         <% end %>
         {
             "file": "blog/atom.xml"
+        },
+        {
+            "file": "blog/cdn.json"
         }
     ]
 }
