--- a/source/cdn.json.erb
+++ b/source/cdn.json.erb
@@ -4,5 +4,5 @@ directory_index: false
 notoc: true
 ---
 {
-    "cdnUrl": "<%=ENV['CDN_URL'] || ''%>"
+    "cdnUrl": "<%=ENV['CDN_URL'] || ''%>/blog"
 }
