--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,7 @@
 ---
 pageable: true
 per_page: 10
-title: Developer Blog
+title: PureCloud Developer Blog
 is_root_page: true
 ---
 <% if paginate && num_pages > 1 %>
